# librecube

./: .gitignore  CMakeLists.txt  INSTALL  README.asciidoc  notes
buildtools/cmake/: FindSFML.cmake  FindVAST.cmake
include/: avatar.hpp  block.hpp  camera.hpp  cube.hpp  edge.hpp  individual.hpp  librecube.hpp  line2d.hpp  node.hpp  peer.hpp  point2d.hpp  vector.hpp  voronoi.hpp  world.hpp
src/: CMakeLists.txt  avatar.cpp  block.cpp  camera.cpp  cube.cpp  individual.cpp  librecube.cpp  line2d.cpp  point2d.cpp  vector.cpp  world.cpp
src/network/: CMakeLists.txt  edge.cpp  hw-vast.cpp  node.cpp  peer.cpp  voronoi.cpp
